--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
         <title>ToDo List</title>
         <link href="style.css" rel="stylesheet">
         <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
-        <script src="./todo.js"></script>
-        <script>
-            const list = document.getElementById("list");
-            ToDo.draw(list);
-        </script>
     </head>
 
     <body>
@@ -18,36 +13,15 @@
                 <input name="search" class="search-input" placeholder="Wpisz szukane zadanie...">
             </div>
 
-            <div class="list" id="list">
-                <div class="element">
-                    <input type="checkbox" class="select">
-                    <div class="text">test</div>
-                    <div class="date"></div>
-                    <div class="delete"><i class='bx bx-trash'></i></div>
-                </div>
+            <div class="list" id="list"></div>
 
-                <div class="element">
-                    <input type="checkbox" class="select">
-                    <div class="text">test</div>
-                    <div class="date">2020-10-10</div>
-                    <div class="delete"><i class='bx bx-trash'></i></div>
-                </div>
-
-                <div class="element">
-                    <input type="checkbox" class="select">
-                    <div class="text">test</div>
-                    <div class="date"></div>
-                    <div class="delete"><i class='bx bx-trash'></i></div>
-                </div>
-
-                <div class="element">
-                    <input type="checkbox" class="select">
-                    <div class="text">test</div>
-                    <div class="date"></div>
-                    <div class="delete"><i class='bx bx-trash'></i></div>
-                </div>
+            <div class="add-form">
+                <input id="newTaskText" type="text" placeholder="Nowe zadanie...">
+                <input id="newTaskDate" type="date">
+                <button id="addTask">Dodaj</button>
             </div>
 
         </div>
+        <script src="./todo.js"></script>
     </body>
 </html>
